test_suite/alan-2022-examples/failing/001690_mutation.alan
source Q4 begin call Tn(put) end
